bugfix: fill screen on mobile

--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -80,7 +80,7 @@ h6 {
   .description {
     font-family: 'Big Noodle Titling';
     font-size: 1.5rem;
-    margin: 5%;
+    margin: 2%;
   }
 
   .title {
